--- a/route.yaml
+++ b/route.yaml
@@ -1,10 +1,10 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: rollout-bluegreen
+  name: bluegreen
 spec:
   port:
     targetPort: http
   to:
     kind: Service
-    name: rollout-bluegreen
+    name: bluegreen
